[metadata]
name = rti
version = 0.0.1
author = Marc Chiesa
author_email = marc@rti.com
description=A full Python binding for RTI Connext DDS
long_description = file: README.md, LICENSE

[options]
zip_safe = False
include_package_data = True
packages = rti, rti.logging
package_dir =
    rti = rti_pkg

