[metadata]
name = rti
version = 0.1.4
author = Marc Chiesa
author_email = marc@rti.com
description=A full Python binding for RTI Connext DDS
long_description = file: README.md, LICENSE

[options]
zip_safe = False
include_package_data = True
packages = rti, rti.logging, rti.request
package_dir =
    rti = rti_pkg

