[metadata]
name = rti.connext

version = 7.1.0
author = RTI
author_email = support@rti.com
description=A full Python binding for RTI Connext DDS
long_description = file: README.md, LICENSE

[options]
zip_safe = False
include_package_data = True
packages = rti, rti.logging, rti.request, rti.idl_impl, rti.types
package_dir =
    rti = rti_pkg
install_requires =
    dataclasses; python_version<"3.7"
